--- a/css/contact.css
+++ b/css/contact.css
@@ -5,8 +5,8 @@ body {
   background-color: #f5f5f5;
   color: #333;
 }
+/* Style des boutons dans la navbar */
 
-/* Header custom */
 .custom-div {
   background-color: #f1f1f1;
 }
@@ -17,8 +17,6 @@ body {
   color: #333;
 }
 
-
-/* Section contact */
 .contact-header {
   padding: 50px 0;
   background-color: #fff;
@@ -37,7 +35,6 @@ body {
   font-size: 18px;
 }
 
-/* Contact Info & Form */
 .contact-info {
   background-color: #fff;
   padding: 50px 20px;
@@ -45,7 +42,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Informations de contact */
+
 .contact-details h2 {
   font-size: 28px;
   color: #333;
@@ -86,7 +83,6 @@ body {
   color: #00bfff;
 }
 
-/* Formulaire de contact */
 .contact-form h2 {
   font-size: 28px;
   color: #333;
@@ -116,7 +112,7 @@ body {
   background-color: #009fdc;
 }
 
-/* Responsivité */
+
 @media (max-width: 768px) {
   .contact-info {
     padding: 20px;
